--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "build-types"
+    "outDir": "build-types",
+    "experimentalDecorators": true
   },
   "include": [
     "src/**/*.ts",
