--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "kolmafia": "^1.0.2",
     "webpack-bundle-analyzer": "^4.1.0"
   },
   "devDependencies": {
