--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,14 @@
   "extends": "./node_modules/gts/",
   "rules": {
     "node/no-unpublished-import": "off",
-    "prefer-template": "error"
+    "prefer-template": "error",
+    "sort-imports": [
+      "error",
+      {
+        "ignoreCase": true,
+        "ignoreDeclarationSort": true
+      }
+    ]
   },
   "parserOptions": {
     "ecmaVersion": 2020,
