--- a/package.json
+++ b/package.json
@@ -14,14 +14,12 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "kolmafia": "^1.0.2",
-    "webpack-bundle-analyzer": "^4.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
@@ -30,7 +28,8 @@
     "babel-loader": "^8.2.2",
     "core-js": "^3.8.0",
     "gts": "^3.0.2",
-    "libram": "github:Loathing-Associates-Scripting-Society/libram",
+    "kolmafia": "^1.0.3",
+    "libram": "0.0.3",
     "lodash-es": "^4.17.15",
     "patch-package": "^6.2.2",
     "typescript": "^4.0.3",
