--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "minehobo2",
+  "name": "forko",
   "version": "1.0.0",
-  "description": "Hobopolis farming scripts",
-  "repository": "https://github.com/phulin/minehobo2.git",
-  "main": "KoLmafia/scripts/minehobo/minehobo.js",
+  "description": "Salad Fork farming scripts",
+  "repository": "https://github.com/phulin/forko.git",
+  "main": "KoLmafia/scripts/forko/forko.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "patch-package",
-    "build": "npm run build:types && npm run build:js",
-    "build:types": "tsc",
-    "build:js": "webpack",
-    "watch": "webpack --watch --progress"
+    "build": "node build.mjs",
+    "format": "eslint src --fix --ext .ts && prettier --write src/**/*.ts",
+    "lint": "eslint src --ext .ts && prettier --check src/**/*.ts",
+    "watch": "node build.mjs --watch",
+    "install-mafia": "create-kolmafia-script --install"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "kolmafia": "^1.0.3",
     "libram": "^0.3.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
     "@babel/core": "^7.12.9",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
@@ -29,12 +27,9 @@
     "@types/node": "^14.11.2",
     "babel-loader": "^8.2.2",
     "core-js": "^3.8.0",
-    "gts": "^3.0.2",
-    "kolmafia": "^1.0.3",
+    "esbuild": "^0.15.13",
+    "esbuild-plugin-babel": "^0.2.3",
     "lodash-es": "^4.17.15",
-    "patch-package": "^6.2.2",
-    "typescript": "^4.0.3",
-    "webpack": "^5.8.0",
-    "webpack-cli": "^4.2.0"
+    "typescript": "^4.0.3"
   }
 }
