--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,15 @@
 {
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 2020,
-    "sourceType": "module"
-  },
   "plugins": ["@typescript-eslint", "libram"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "rules": {
     "block-scoped-var": "error",
-    "eol-last": "error",
     "eqeqeq": "error",
-    "no-trailing-spaces": "error",
     "no-var": "error",
-    "prefer-arrow-callback": "error",
     "prefer-const": "error",
+    "eol-last": "error",
+    "prefer-arrow-callback": "error",
+    "no-trailing-spaces": "error",
     "prefer-template": "error",
     "sort-imports": [
       "error",
@@ -22,15 +18,13 @@
         "ignoreDeclarationSort": true
       }
     ],
+    "node/no-unpublished-import": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error",
-    "libram/verify-constants": "error",
-    "no-restricted-syntax": [
-      "error",
-      {
-        "selector": "TSEnumDeclaration:not([const=true])",
-        "message": "Don't declare non-const enums"
-      }
-    ]
+    "libram/verify-constants": "error"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module"
   }
 }
