--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,8 @@
 {
+  "editor.codeActionsOnSave": {
+    "source.addMissingImports": true
+  },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.tabSize": 2,
-  "[javascript]": {
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
-    }
-  },
-  "[typescript]": {
-    "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
-    }
-  },
-  "[json]": {
-    "editor.formatOnSave": true
-  },
-  "eslint.validate": ["javascript", "typescript"]
+  "editor.formatOnSave": true,
+  "editor.tabSize": 2
 }
