--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "kolmafia": "^1.0.3",
-    "libram": "^0.3.3"
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
+    "eslint-config-prettier": "^8.8.0",
+    "kolmafia": "^5.27425.0",
+    "libram": "^0.8.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.8",
@@ -25,10 +28,11 @@
     "@babel/preset-typescript": "^7.12.7",
     "@types/lodash-es": "^4.17.3",
     "@types/node": "^14.11.2",
-    "babel-loader": "^8.2.2",
     "core-js": "^3.8.0",
     "esbuild": "^0.15.13",
     "esbuild-plugin-babel": "^0.2.3",
+    "eslint": "^8.43.0",
+    "eslint-plugin-libram": "^0.2.31",
     "lodash-es": "^4.17.15",
     "typescript": "^4.0.3"
   }
