--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "editor.codeActionsOnSave": {
-    "source.addMissingImports": true
+    "source.addMissingImports": true,
+    "source.organizeImports": true,
+    "source.fixAll": true
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
